--- a/src/scss/navbar.scss
+++ b/src/scss/navbar.scss
@@ -1,19 +1,63 @@
+@import url('https://fonts.cdnfonts.com/css/helvetica-neue-55');
+@font-face {
+    font-family: helvetica-regular;
+    src: url(../../public/HelveticaNeue-01.ttf);
+}
+@font-face {
+    font-family: helvetica-bold;
+    src: url(../../public/HelveticaNeue-Bold-02.ttf);
+}
+
 @media only screen and (min-width: 650px) {
 
-    .nav-links {
-        display: flex;
-        justify-content: space-between;
-        .navbar-left {
-            display: flex;
-            justify-content: left;
-        }
+    body {
+        margin: 0;
     }
 
-    .link {
+    nav {
+        font-family: helvetica-regular;
+        margin: 0px;
+        display: flex;
+        justify-content: space-between;
+        align-content: center;
+        min-height: 1.5rem;
+        width: 100%;
+        padding: 0.5rem 0rem 1rem 0rem;
+
+        .link, .logo {
+            color:black;
+            text-decoration: none;
+        }
+
+        .active-link, .link:hover {
+            font-family: helvetica-bold;
+            color: black;
+            text-decoration: underline;
+        }
+        
+        .navbar-left {
+        margin: 0px;
+        display: flex;
+        justify-content: left;
+        align-items: center;
+        gap: 1.5rem;
         font-size: 1rem;
+        }
+        
+        .navbar-right {
+            display: flex;
+            flex-direction: row;
+            justify-content: right;
+            align-items: center;
+            gap: 1.5rem;
+            font-size: 1rem;
+        }
+
     }
+    
     .icon {
-        font-size: 5rem;
+        font-size: 1rem;
+        color: black;
     }
     
 }
