--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,16 @@
-.container {
-    margin: 0px;
+html,
+body {
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+    font-family: Arial, sans-serif;
 }
 
-* {
-    margin: 0;
+html,
+body,
+#root,
+.App {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
 }
