--- a/src/App.scss
+++ b/src/App.scss
@@ -6,6 +6,14 @@ body {
     font-family: Arial, sans-serif;
 }
 
+.hero {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+}
+
 html,
 body,
 #root,
