--- a/src/scss/hero.scss
+++ b/src/scss/hero.scss
@@ -1,10 +1,12 @@
 img {
-    height: auto;
-    width: 32rem;
-    padding-top: 1rem;
+    height: 90%;
+    width: auto;
+    align-self: center;
 }
 
 .container {
     display: flex;
     justify-content: space-around;
+    height: calc((var(--window-height) - 41px));
+    margin: 0;
 }
