--- a/src/scss/navbar.scss
+++ b/src/scss/navbar.scss
@@ -57,8 +57,6 @@
     }
      
     .link, .logo {
-        color:black;
-        text-decoration: none;
         display: flex;
         flex-direction: row;
         gap: 0.05rem;
@@ -69,4 +67,42 @@
         color: black;
     }
     
+}
+
+.link, .logo {
+    color:black;
+    text-decoration: none;
+}
+
+.icon, .hamburger-icon {
+    font-size: 3rem;
+}
+
+.navbar-mobile {
+    display: flex;
+    flex-direction: column;
+    font-size: 2rem;
+}
+    
+.navbar-top {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    .logo {
+        align-self: center;
+    }
+}
+
+.navbar-bottom {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+}
+
+.link-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    background-color: white;
+    width: 100%;
 }
