--- a/src/scss/navbar.scss
+++ b/src/scss/navbar.scss
@@ -60,6 +60,8 @@
         display: flex;
         flex-direction: row;
         gap: 0.05rem;
+        color:black;
+        text-decoration: none;
     }
 
     .icon {
@@ -69,40 +71,44 @@
     
 }
 
-.link, .logo {
-    color:black;
-    text-decoration: none;
-}
+@media only screen and (max-width: 649px) {
+    .link, .logo {
+        color:black;
+        text-decoration: none;
+    }
 
-.icon, .hamburger-icon {
-    font-size: 3rem;
-}
+    .icon, .hamburger-icon {
+        font-size: 3rem;
+    }
 
-.navbar-mobile {
-    display: flex;
-    flex-direction: column;
-    font-size: 2rem;
-}
-    
-.navbar-top {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    .logo {
-        align-self: center;
+    .navbar-mobile {
+        display: flex;
+        flex-direction: column;
+        font-size: 2rem;
+    }
+        
+    .navbar-top {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        .logo {
+            align-self: center;
+        }
+    }
+
+    .navbar-bottom {
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-end;
+    }
+
+    .link-container {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        background-color: white;
+        width: 100%;
     }
 }
 
-.navbar-bottom {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-}
 
-.link-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    background-color: white;
-    width: 100%;
-}
