--- a/src/App.scss
+++ b/src/App.scss
@@ -18,7 +18,18 @@ html,
 body,
 #root,
 .App {
+    position: relative;
     height: 100%;
     display: flex;
     flex-direction: column;
+}
+
+.container {
+    display: flex;
+    position: relative;
+    flex-direction: column;
+    .navbar {
+        position: relative;
+        z-index: 2;
+    }
 }
