--- a/src/App.scss
+++ b/src/App.scss
@@ -20,8 +20,6 @@ body,
 .App {
     position: relative;
     height: 100%;
-    display: flex;
-    flex-direction: column;
 }
 
 .container {
@@ -31,5 +29,9 @@ body,
     .navbar {
         position: relative;
         z-index: 2;
+    }
+    .content {
+        display: flex;
+        flex-direction: column;
     }
 }
