--- a/src/scss/navbar.scss
+++ b/src/scss/navbar.scss
@@ -83,16 +83,16 @@
     }
 
     .navbar-mobile {
-        display: flex;
+        display: fixed;
         position: relative;
         flex-direction: column;
-        justify-content: space-between;
+        justify-content: flex-end;
         font-size: 2rem;
+        overflow: visible;
         .navbar-top {
             display: flex;
             flex-direction: row;
             justify-content: space-between;
-
         }
         .navbar-left {
             display: flex;
@@ -104,6 +104,7 @@
             .logo {
                 align-self: center;
                 font-size: 1rem;
+                font-family: helvetica-bold;
             }
         }
         .navbar-right {
@@ -114,19 +115,36 @@
             position: relative;
             z-index: 2;
         }
+
+        @keyframes slideDown {
+            0% {
+                transform: translateY(0);
+              }
+              100% {
+                transform: translateY(100%);
+              }
+        }
+        @keyframes slideUp {
+            0% {
+                transform: translateY(100%);
+              }
+              100% {
+                transform: translateY(0);
+              }
+        }
         .link-container {
+            animation: var(--animation) 1s ease-out forwards;
+            position: absolute;
+            top: calc(49px - 100vh + 49px);
+            height: calc(100vh - 49px);
             display: flex;
             flex-direction: column;
             justify-content: flex-start;
-            background-color: white;
+            background-color:pink;
             width: 100%;
-            position: relative;
             z-index: 1;
         }
     }
-
-    
-    
 }
 
 
