--- a/src/scss/navbar.scss
+++ b/src/scss/navbar.scss
@@ -93,14 +93,16 @@
             display: flex;
             flex-direction: row;
             justify-content: space-between;
+            border-bottom: 1px solid rgb(225,225,225);
         }
         .navbar-left {
             display: flex;
             flex-direction: row;
-            justify-content: center;
+            justify-content: left;
             position: relative;
             z-index: 2;
             background-color: white;
+            width: calc(100vw - 42px);
             .logo {
                 align-self: center;
                 font-size: 1rem;
