--- a/src/scss/navbar.scss
+++ b/src/scss/navbar.scss
@@ -57,7 +57,7 @@
 
     }
      
-    .link, .logo {
+    .link, .logo, .sun-icon {
         display: flex;
         flex-direction: row;
         gap: 0.05rem;
@@ -68,6 +68,25 @@
     .icon {
         font-size: 1rem;
         color: black;
+    }
+
+    .sun-icon {
+        align-self: center;
+        width: auto;
+        height: 22px;
+    }
+
+    .navbar-top,
+    .navbar-left, 
+    .logo, 
+    .hamburger-icon, 
+    .sun-icon, 
+    .navbar-right, 
+    body,
+    .icon, 
+    .link 
+    {
+        animation: var(--fadeAnimation) 0.2s ease-in-out forwards;
     }
     
 }
