accidentally screwed up img

--- a/src/scss/hero.scss
+++ b/src/scss/hero.scss
@@ -24,6 +24,9 @@
     }
 
     img {
+        height: 90%;
+        width: auto;
+        align-self: center;
         align-self: center;
     }
 }
