--- a/src/App.scss
+++ b/src/App.scss
@@ -38,18 +38,20 @@ html, body, #root, .App {
     .app-container {
         display: flex;
         flex-direction: column;
+        
         .navbar {
             position: absolute;
             top: 0px;
             z-index: 2;
             width: 100%;
         }
+
         .content {
             position: relative;
             top: 49px; //navbar height is 49px
             z-index: 1;
             width: max-content;
-            align-self: flex-end;
+            align-self: center;
         }
     }
 }
