--- a/src/scss/projects.scss
+++ b/src/scss/projects.scss
@@ -7,3 +7,14 @@
         align-items: center;
     }
 }
+
+@media only screen and (max-width: 649px) {
+
+    .projects-container {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        align-items: center;
+    }
+
+}
