changed the logo for summBot

--- a/src/scss/card.scss
+++ b/src/scss/card.scss
@@ -64,6 +64,7 @@
         .card-desc {
             margin: 0 0 5px 5px;
             grid-area: card-desc;
+            white-space: pre-wrap;
         }
     
         h1 {
