--- a/src/scss/card.scss
+++ b/src/scss/card.scss
@@ -1,8 +1,9 @@
 @media only screen and (min-width: 650px) {
     .card-container {
-        display: grid;
-        grid-template-columns: 1;
-        grid-template-rows: 2;
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        align-items: center;
         width: fit-content;
         border: 1px solid lightgray;
         border-radius: 10px;
@@ -18,17 +19,20 @@
             width: 5vw;
             height: auto;
         }
+
+        .card-desc {
+            width: 15vw;
+            white-space: pre-wrap;
+            text-align: left;
+            margin: 0 0 0 5px;
+        }
     
         h1 {
-            margin: 0 1rem 0 0;
+            margin: 0 15px 0 15px;
             font-size: 1rem;
             align-content: center;
             text-align: left;
             width: max-content;
-        }
-    
-        p {
-            margin-top: 1rem;
         }
     }
 }
