--- a/src/App.scss
+++ b/src/App.scss
@@ -16,6 +16,8 @@ html, body {
 html, body, #root, .App {
     position: relative;
     height: 100%;
+    -webkit-font-smoothing: antialiased; /* For macOS */
+    -moz-osx-font-smoothing: grayscale; /* For macOS */
 }
 
 .container {
