--- a/src/App.scss
+++ b/src/App.scss
@@ -1,8 +1,15 @@
+@import url('https://fonts.cdnfonts.com/css/helvetica-neue-55');
+
+@font-face {
+    font-family: helvetica-regular;
+    src: url(../../public/HelveticaNeue-01.ttf);
+}
+
 html, body {
     margin: 0;
     padding: 0;
     overflow-x: hidden;
-    font-family: Arial, sans-serif;
+    font-family: Arial, helvetica-regular;
 }
 
 .hero {
