--- a/src/App.scss
+++ b/src/App.scss
@@ -10,6 +10,8 @@ html, body {
     padding: 0;
     overflow-x: hidden;
     font-family: Arial, helvetica-regular;
+    -webkit-font-smoothing: antialiased; /* For macOS */
+    -moz-osx-font-smoothing: grayscale; /* For macOS */
 }
 
 .hero {
