--- a/src/scss/navbar.scss
+++ b/src/scss/navbar.scss
@@ -11,16 +11,8 @@
 
 @media only screen and (min-width: 650px) {
 
-    body {
-        margin: 0;
-    }
-
-    * {
-        margin: 0;
-    }
-
     nav {
-        font-family: helvetica-regular;
+        font-family: Arial, helvetica-regular;
         font-size: 1rem;
         margin: 0px;
         display: flex;
