forgot some places to add arial fallback

--- a/src/scss/navbar.scss
+++ b/src/scss/navbar.scss
@@ -24,7 +24,7 @@
        
 
         .active-link, .link:hover {
-            font-family: helvetica-bold;
+            font-family: Arial, helvetica-bold;
             color: black;
             text-decoration: underline;
             padding-bottom: 0.1rem;
@@ -138,7 +138,7 @@
             .logo {
                 align-self: center;
                 font-size: 1rem;
-                font-family: helvetica-bold;
+                font-family: Arial, helvetica-bold;
                 padding-left: 9px;
             }
         }
