--- a/src/scss/navbar.scss
+++ b/src/scss/navbar.scss
@@ -138,7 +138,7 @@
             .logo {
                 align-self: center;
                 font-size: 1rem;
-                font-family: Arial, helvetica-bold;
+                font-family: helvetica-bold;
                 padding-left: 9px;
             }
         }
@@ -163,6 +163,9 @@
             justify-content: flex-start;
             width: 100%;
             z-index: 1;
+            .link {
+                margin: 0 0 0 5px;
+            }
         }
     }
 
