fixed navbar not bolding on desktop

--- a/src/scss/navbar.scss
+++ b/src/scss/navbar.scss
@@ -24,7 +24,7 @@
        
 
         .active-link, .link:hover {
-            font-family: Arial, helvetica-bold;
+            font-family: helvetica-bold;
             color: black;
             text-decoration: underline;
             padding-bottom: 0.1rem;
